# TopSoft

./: .env.example  .gitignore  .pre-commit-config.yaml  README.md  installer.iss  main.py  merge.ipynb  mockoon.json  pv.bat  pyproject.toml
scripts/: build_all.py  build_and_install.py  bump_and_build.py  bump_version.py  poetry_wrapper.py  sync_version.py
topsoft/: config.py  constants.py  database.py  db.py  frames.py  models.py  repository.py  secrets.py  settings.py  tasks.py  utils.py
topsoft/activitysoft/: api.py
