[project]
name = "topsoft"
version = "0.0.0"
description = "Integração entre as catracas Topdata e o ActivitySoft."
authors = [
    {name = "viniciusccosta",email = "viniciusccosta95@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "ttkbootstrap (>=1.12.0,<2.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "pickledb (>=1.3.2,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"

