[project]
name = "topsoft"
version = "0.0.1"
description = "Integração entre as catracas Topdata e o ActivitySoft."
authors = [
    {name = "viniciusccosta",email = "viniciusccosta95@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = "~3.12"
dependencies = [
    "ttkbootstrap (>=1.12.0,<2.0.0)",
    "keyring (>=25.6.0,<26.0.0)",
    "pickledb (>=1.3.2,<2.0.0)",
    "rich (>=14.0.0,<15.0.0)",
    "python-decouple (>=3.8,<4.0)",
    "httpx (>=0.28.1,<0.29.0)",
    "aiometer (>=1.0.0,<2.0.0)",
    "sqlmodel (>=0.0.24,<0.0.25)",
    "pygtail (>=0.14.0,<0.15.0)",
    "pystray (>=0.19.5,<0.20.0)",
    "toml (>=0.10.2,<0.11.0)",
    "pandas (>=2.3.0,<3.0.0)",
    "ipykernel (>=6.29.5,<7.0.0)",
    "jupyter (>=1.1.1,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
pyinstaller = "^6.13.0"
taskipy = "^1.14.1"

